minecraft/mc-spigot1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spigot1
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spigot1
  template:
    metadata:
      labels:
        app: spigot1
        worldType: survival
    spec:
      containers:
      - name: spigot-1
        image: "docker.ttys0.net/spigot:1.13.2"
        ports:
        - containerPort: 25565
        volumeMounts:
        - name: server
          mountPath: /minecraft/server
        - name: spigot1-server-properties
          mountPath: /minecraft/server/server.properties
          subPath: server.properties
      volumes:
      - name: server
        persistentVolumeClaim:
          claimName: spigot-1
      - name: spigot-1-config
        configMap:
          name: spigot-1-config
          items:
          - key: config.production.json
            path: config.production.json
      imagePullSecrets:
      - name: docker-reg-secret
---
