minecraft/amber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amber
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      world: amber
  template:
    metadata:
      labels:
        app: minecraft
        world: amber
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: amber
          image: ttys0/spigot:v1.15.2
          workingDir: "/minecraft/worlds/amber-2020-05-10"
          ports:
            - containerPort: 25565
            - containerPort: 8123
            - containerPort: 25575
          volumeMounts:
            - name: worlds
              mountPath: /minecraft/worlds
      volumes:
        - name: worlds
          persistentVolumeClaim:
            claimName: minecraft-worlds
---
apiVersion: v1
kind: Service
metadata:
  name: amber
  namespace: minecraft
  labels:
    app: minecraft
    world: amber
spec:
  ports:
    - name: server
      port: 25565
      targetPort: 25565
    - name: map
      port: 8123
      targetPort: 8123
    - name: rcon
      port: 25575
      targetPort: 25575
  selector:
    app: minecraft
    world: amber
