minecraft/bungeecord.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bungeecord
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bungeecord
  template:
    metadata:
      labels:
        app: bungeecord
    spec:
      imagePullSecrets:
        - name: github
      containers:
        - imagePullPolicy: IfNotPresent
          name: bungeecord
          image: docker.pkg.github.com/ttys0/docker-minecraft/bungeecord:1420
          ports:
            - containerPort: 25577
          volumeMounts:
            - name: bungeecord-yml
              mountPath: /config/config.yml
              subPath: config.yml
            - name: bungeecord-plugins
              mountPath: /plugins
      volumes:
        - name: bungeecord-yml
          configMap:
            name: bungeecord-yml
            items:
              - key: config-yml
                path: config.yml
        - name: bungeecord-plugins
          persistentVolumeClaim:
            claimName: bungeecord
---
apiVersion: v1
kind: Service
metadata:
  name: bungeecord
  namespace: minecraft
  labels:
    app: bungeecord
spec:
  type: LoadBalancer
  ports:
    - name: server
      port: 25565
      targetPort: 25577
  selector:
    app: bungeecord
