minecraft/lobby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobby
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      world: lobby
  template:
    metadata:
      labels:
        app: minecraft
        world: lobby
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: lobby
          image: hub.skj.dev/img/spigot:1.16.2
          workingDir: "/minecraft/worlds/lobby"
          resources:
            limits:
              memory: "4Gi"
            requests:
              cpu: 1
              memory: "3Gi"
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: worlds
              mountPath: /minecraft/worlds
      volumes:
        - name: worlds
          persistentVolumeClaim:
            claimName: minecraft-worlds
---
apiVersion: v1
kind: Service
metadata:
  name: lobby
  namespace: minecraft
  labels:
    app: minecraft
    world: lobby
spec:
  ports:
    - name: server
      port: 25565
      targetPort: 25565
  selector:
    app: minecraft
    world: lobby
